--- a/index.html
+++ b/index.html
@@ -12,247 +12,154 @@ redirect_from:
   <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-flex-column">
     <div class="teaser-register">
       <img src="{{ site.baseurl }}/static/images/Logo_bigger.png" alt="logo UIKonf" />
-      <p>May 26th-29th 2019</br>
-        <a href="#Sponsors">Become a Sponsor</a> &nbsp; | &nbsp;
-        <a href="http://uikonf.us9.list-manage.com/subscribe?u=08d7d9a7a55f501920eb76453&id=d3f17105cf" target="_blank">Sign
-          up for News</a>
+      <p>May 26th-29th 2019<br/>
+      <a href="#Location"><i class="uk-icon-map-o"></i> Radialsystem V - Berlin</a></p>
+      <a class="btn uk-button-large" href="{{ site.ticket_url }}">Register now</a>
+      <p><a href="#Sponsors">Become a Sponsor</a> &nbsp; | &nbsp;
+      <a href="http://uikonf.us9.list-manage.com/subscribe?u=08d7d9a7a55f501920eb76453&id=d3f17105cf" target="_blank">Sign up for News</a>
       </p>
     </div>
   </div>
 </div>
 
-<div class="backshape brand-color">
-  <div class="wrapper">
-    <div class="uk-container uk-container-center">
-      <div class="uk-grid">
-        <div class="uk-width-medium-8-10 uk-container-center">
-          <div class="uk-grid">
-            <div class="uk-width-1-1">
-              <h2>About UIKonf</h2>
-            </div>
-            <div class="uk-width-medium-1-2">
-              <p>UIKonf is Berlin's independent conference for serious iOS developers. Taking place from May 26th to
-                29th 2019 in RADIALSYSTEM V in Berlin it is a great place to meet and connect with experienced
-                developers from all
-                over Europe.</p>
-              <p>UIKonf features inspiring speakers giving talks on cutting edge topics in iOS development, mobile
-                design and business.</p>
-            </div>
-            <div class="uk-width-medium-1-2">
-              <p class="uk-contrast">But UIKonf is not only about gathering knowledge. We want to facilitate new
-                connections and friends amongst
-                our great community by providing an inclusive setting where all participants feel safe and welcome. In
-                order to achieve that, we expect all to abide by our
-                <a href="coc">Code of Conduct</a>.</p>
-              <p>To help people connect, we framed UIKonf with social events which provide an informal environment for
-                meeting like-minded people.</p>
-            </div>
-          </div>
-        </div>
+<!-- ABOUT --> 
+{% capture about_content %}
+  <div class="uk-width-medium-8-10 uk-container-center">
+    <div class="uk-grid">
+      <div class="uk-width-1-1">
+        <h2>About UIKonf</h2>
+      </div>
+      <div class="uk-width-medium-1-2">
+        <p>UIKonf is Berlin's independent conference for serious iOS developers. Taking place from May 26th to
+        29th 2019 in RADIALSYSTEM V in Berlin it is a great place to meet and connect with experienced
+        developers from all over Europe.</p>
+        <p>UIKonf features inspiring speakers giving talks on cutting edge topics in iOS development, mobile
+        design and business.</p>
+      </div>
+      <div class="uk-width-medium-1-2">
+        <p class="uk-contrast">But UIKonf is not only about gathering knowledge. We want to facilitate new
+        connections and friends amongst our great community by providing an inclusive setting where all participants feel safe and welcome. In
+        order to achieve that, we expect all to abide by our <a href="coc">Code of Conduct</a>.</p>
+        <p>To help people connect, we framed UIKonf with social events which provide an informal environment for
+        meeting like-minded people.</p>
       </div>
     </div>
   </div>
-</div>
+{% endcapture %}
+{% include content-block.md topShape="backshape brand-color" content=about_content %}
 
-
-<div class="straight">
-  <div class="wrapper">
-    <div class="uk-container uk-container-center">
-      <div class="uk-grid uk-grid-small">
-        <div class="uk-width-1-1 uk-text-center">
-          <h2 class="brand-color">Tickets</h2>
-        </div>
-        <div class="uk-width-1-1">
-          <p>
-            <tito-widget event="uikonf/uikonf-2019"></tito-widget>
-          </p>
-          <p>Ticket prices include VAT (MwSt.), free drinks, lunch on the conference days and the UIKonf party. See <a
-              href="refunds">our refunds policy</a> if you are not sure about your plans in May.
-          </p>
-          <!-- <p>We also provide discounted diversity tickets for 99€, aimed to help underrepresented groups in tech. This
-            includes but isn’t limited to: women, people of colour, LGBTQIA+ people, disabled people and generally
-            people who are unable to attend without financial assistance. If you think you are eligible for a diversity
-            ticket, simply <a href="https://goo.gl/forms/E02529wutoMOyB2S2" target="_blank">fill out the application
-              form</a>.</p> -->
-          <p>We will also offer discounted tickets to members of underrepresented groups in tech. Details for this will
-            follow soon. If you want to support diversity at UIKonf, you can do so when booking your ticket. Simply
-            select the additional "Scholarship Sponsor" package which provides one ticket for our diversity ticket applicants.</p>
-        </div>
-      </div>
-    </div>
+<!-- TICKETS --> 
+{% capture ticket_content %}
+  <div class="uk-width-1-1">  
+    <p><tito-widget event="uikonf/uikonf-2019"></tito-widget></p>
+    <p>Ticket prices include VAT (MwSt.), free drinks, lunch on the conference days and the UIKonf party. See <a
+        href="refunds">our refunds policy</a> if you are not sure about your plans in May.</p>
+    <!-- <p>We also provide discounted diversity tickets for 99€, aimed to help underrepresented groups in tech. This
+      includes but isn’t limited to: women, people of colour, LGBTQIA+ people, disabled people and generally
+      people who are unable to attend without financial assistance. If you think you are eligible for a diversity
+      ticket, simply <a href="https://goo.gl/forms/E02529wutoMOyB2S2" target="_blank">fill out the application
+        form</a>.</p> -->
+    <p>We will also offer discounted tickets to members of underrepresented groups in tech. Details for this will
+      follow soon. If you want to support diversity at UIKonf, you can do so when booking your ticket. Simply
+      select the additional "Scholarship Sponsor" package which provides one ticket for our diversity ticket applicants.</p>
   </div>
-</div>
+{% endcapture %}
+{% include content-block.md topShape="straight" title="Tickets" content=ticket_content %}
 
-<div class="backshape light-grey">
-  <div class="wrapper">
-    <div class="uk-container uk-container-center">
-      <div class="uk-grid uk-grid-small">
-        <div class="uk-width-1-1 uk-text-center">
-          <h2 class="brand-color">Speakers</h2>
-        </div>
-        <div class="uk-width-1-1">
-          <p>UIKonf hosts a diverse selection of inspiring speakers. We select and invite about the half of our
-            speakers. The
-            other half will be selected by our community through our <a href="http://cfp.uikonf.com/about">anonymous
-              call for proposals</a> which opens in January 2019.
-            As a speaker, your travel expenses will be reimbursed and you will be our guests
-            at our selected Hotel in Berlin. Of course, we will also reimburse you for your ticket if you already have
-            purchased
-            one.</p>
-            <p><a href="http://uikonf.us9.list-manage.com/subscribe?u=08d7d9a7a55f501920eb76453&id=d3f17105cf" target="_blank">Sign
-              up for our newsletter to hear about our inivted speakers first.</a></p>
-        </div>
-        <!-- {% for speaker in site.speakers %}
-        <div class="uk-width-medium-1-2 uk-width-small-1-2 uk-width-large-1-3">
-          <div class="box">
-            <figure class="uk-overlay uk-overlay-hover">
-              <img class="uk-overlay-spin" src="/static/images/speaker/{{ speaker.image }}" alt="{{ speaker.title }}" />
-              <a class="uk-position-cover" href="/speakers#{{ speaker.anchor }}"></a>
-            </figure>
-            <div class="info-box">
-              <h4>{{ speaker.title }}</h4>
-              <p>
-                <small>{{ speaker.short-bio }}</small>
-              </p>
-            </div>
-          </div>
-        </div>
-        {% endfor %} -->
-      </div>
-    </div>
+<!-- SPEAKER --> 
+{% capture speaker_content %}
+  <div class="uk-width-1-1">
+    <p>UIKonf hosts a diverse selection of inspiring speakers. We select and invite about the half of our
+    speakers. The other half will be selected by our community through our <a href="http://cfp.uikonf.com/about">anonymous
+    call for proposals</a> which opens in January 2019.
+    As a speaker, your travel expenses will be reimbursed and you will be our guests
+    at our selected Hotel in Berlin. Of course, we will also reimburse you for your ticket if you already have
+    purchased one.</p>
+    <p><a href="http://uikonf.us9.list-manage.com/subscribe?u=08d7d9a7a55f501920eb76453&id=d3f17105cf" target="_blank">Sign
+      up for our newsletter to hear about our invited speakers first.</a></p>
   </div>
-</div>
-
-<div class="backshape light-grey">
-  <div class="wrapper">
-    <div class="uk-container uk-width-medium-6-10 uk-container-center">
-      <div class="uk-grid">
-        <div class="uk-width-1-1 uk-text-center">
-          <h2 class="brand-color">Schedule</h2>
-        </div>
-        {% include schedule.md context="home" %}
-      </div>
+  {% for speaker in site.speakers %}
+    <div class="uk-width-medium-1-2 uk-width-small-1-2 uk-width-large-1-3">
+        {% capture speaker_link %}/speakers#{{ speaker.anchor}}{% endcapture %}
+        {% capture speaker_image %}/speaker/{{ speaker.image}}{% endcapture %}
+        {% include person.md title=speaker.title inbox-description=speaker.short-bio image=speaker_image link=speaker_link isSmall=0 %}
     </div>
+  {% endfor %}
+{% endcapture %}
+{% include content-block.md topShape="backshape light-grey" title="Speakers" content=speaker_content %}
+
+<!-- SCHEDULE --> 
+{% capture schedule_content %}
+  {% include schedule.md context="home" %}
+{% endcapture %}
+{% include content-block.md topShape="backshape light-grey" title="Schedule" content=schedule_content %}
+
+<!-- SPONSORS --> 
+{% capture sponsor_content %}
+  <div class="uk-width-1-1 uk-text-center">
+    <p>If you want to help us bring the iOS developer community together, <a href="mailto:questions@uikonf.com" target="_blank">get in touch with us</a>. Previous UIKonf supporters
+    include Facebook, ebay Tech, JetBrains, Google Firebase,
+    Sky and Microsoft.</p>
   </div>
-</div>
-
-
-{% assign activeSponsors = site.sponsors | where:"active",1 %} {% if activeSponsors.size > 0 %}
-<div class="backshape">
-  <div class="wrapper">
-    <div class="uk-container uk-container-center">
-      <div class="uk-grid">
-        <div class="uk-width-1-1 uk-text-center">
-          <a name="Sponsors"></a>
-          <h2 class="brand-color">Sponsors</h2>
-        </div>
-        <div class="uk-width-1-1 uk-text-center">
-          <p>If you want to help us bring the iOS developer community together,
-            <a href="mailto:questions@uikonf.com" target="_blank">get in touch with us</a>. Previous UIKonf supporters
-            include Facebook, ebay Tech, JetBrains, Google Firebase,
-            Sky and Microsoft.</p>
-        </div>
-        {% for sponsor in activeSponsors %}
-        <div class="box uk-width-medium-2-3 uk-width-large-1-6 uk-width-small-1-1 ">
-          {% if sponsor.image %}
-          <figure class="uk-overlay uk-overlay-hover">
-            <img class="uk-overlay-spin" src="/static/images/{{ sponsor.image }}" alt="{{ sponsor.image-alt }}">
-            <a class="uk-position-cover" href="{{ sponsor.anchor }}" target="_blank"></a>
-          </figure>
-          {% endif %}
-        </div>
-        <div class="box uk-width-medium-2-3 uk-width-large-2-6 uk-width-small-1-1 ">
-          <p>{{ sponsor.content }}</p>
-        </div>
-        {% endfor %}
-      </div>
+  {% assign activeSponsors = site.sponsors | where:"active",1 %} {% if activeSponsors.size > 0 %}
+  {% for sponsor in activeSponsors %}
+    <div class="uk-width-medium-1-1 uk-width-large-1-2 uk-width-small-1-1 ">
+      {% include sponsor.md content=sponsor.content image=sponsor.image anchor=sponsor.anchor image-alt=sponsor.image-alt%}
     </div>
-  </div>
-</div>
-{% endif %}
+  {% endfor %}
+  {% endif %}
+{% endcapture %}
+{% include content-block.md topShape="backshape" title="Sponsors" content=sponsor_content %}
 
-<div class="backshape light-grey">
-  <div class="wrapper">
-    <div class="uk-container uk-container-center">
-
-      <div class="uk-grid">
-        <div class="uk-width-1-1 uk-text-center">
-          <h2 class="brand-color">Social Events</h2>
-        </div>
-        <div class="uk-width-1-1 uk-margin-large-bottom">
-          <p>A central part of UIKonf are the social events on the Sunday before the conference. Not only do you get to
-            enjoy
-            Berlin for a day but they also give you a first opportunity to get to know other participants of the
-            conference
-            in a fun atmosphere.</p>
-          <p>These are some events we offered in previous years:</p>
-        </div>
-
-        {% for event in site.events %}
-        <div class="box uk-width-medium-1-2 uk-width-large-1-3">
-          <figure class="uk-overlay uk-overlay-hover">
-            {% if event.active == 1 %}
-            <img class="uk-overlay-spin" src="/static/images/events/{{ event.image }}" alt="{{ event.image-alt }}">
-            <a class="uk-position-cover" href="/social-events#{{ event.anchor }}"></a>
-            {% else %}
-            <img src="/static/images/events/{{ event.image }}" alt="{{ event.image-alt }}"> {% endif %}
-          </figure>
-          <div class="grey info-box">
-            <h4>{{ event.title }}</h4>
-            <p>
-              <small>{{ event.description }}</small>
-            </p>
-          </div>
-        </div>
-        {% endfor %}
-      </div>
-
-      {% assign activeEvents = site.events | where:"active",1 %} {% if activeEvents.size > 0 %}
-      <div class="uk-text-center uk-width-large-1-1 uk-width-medium-1-2  uk-width-small-1-1 uk-margin-large-top">
-        <a class="btn uk-button-large" style="padding:20px; text-decoration: none;" href="/social-events" alt="Social Events">More
-          details</a>
-      </div>
-      {% endif %}
-    </div>
-  </div>
-</div>
-
-<div class="backshape opposite">
-    <div class="wrapper">
-      <div class="uk-container uk-width-medium-6-10 uk-container-center">
-        <div class="uk-grid">
-          <div class="uk-width-1-1 uk-text-center">
-            <h2 class="brand-color">This was UIKonf 2018</h2>
-            <a name="videos"></a>
-            <p>Thanks to everyone who participated, to our sponsors, our volunteers and ambassadors. You all contributed
-              to creating a welcoming and fun event.</p>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLdr22uU_wISohI7PIhzq0gotGfKZl1lGo"
-              frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-          </div>
-        </div>
-      </div>
-    </div>
+<!-- SOCIAL EVENTS --> 
+{% capture event_content %}
+  <div class="uk-width-1-1 uk-margin-large-bottom">
+    <p>A central part of UIKonf are the social events on the Sunday before the conference. Not only do you get to enjoy Berlin for 
+      a day but they also give you a first opportunity to get to know other participants of the conference in a fun atmosphere.</p>
+    <p>These are some events we offered in previous years:</p>
   </div>
 
+  {% for event in site.events %}
+    {% include event.md active=event.active title=event.title description=event.description image=event.image image-alt=event.image-alt anchor=event.anchor %}
+  {% endfor %}
 
-<div class="straight brand-color">
-  <div class="wrapper">
-    <div class="uk-container uk-container-center">
-      <div class="uk-grid">
-        <div class="uk-width-medium-4-10">
-          <a name="Location"></a>
-          <h2 class="uk-margin-large-top">Location</h2>
-          <p>RADIALSYSTEM V Berlin,
-            <br>Holzmarktstr. 33,
-            <br>10243 Berlin</p>
-        </div>
-        <div class="uk-width-medium-6-10 uk-margin-large-top">
-          <div id='map'></div>
-        </div>
-      </div>
+  {% assign activeEvents = site.events | where:"active",1 %} 
+  {% if activeEvents.size > 0 %}
+    <div class="uk-text-center uk-width-large-1-1 uk-width-medium-1-2  uk-width-small-1-1 uk-margin-large-top">
+      <a class="btn uk-button-large" style="padding:20px; text-decoration: none;" href="/social-events" alt="Social Events">More details</a>
     </div>
+  {% endif %}
+{% endcapture %}
+{% include content-block.md topShape="backshape light-grey" title="Social Events" content=event_content %}
+
+
+<!-- REVIEW --> 
+{% capture review_content %}
+  <div class="uk-width-1-1 uk-text-center">
+    <a name="videos"></a>
+    <p>Thanks to everyone who participated, to our sponsors, our volunteers and ambassadors. You all contributed
+      to creating a welcoming and fun event.</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLdr22uU_wISohI7PIhzq0gotGfKZl1lGo"
+      frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
   </div>
-</div>
+{% endcapture %}
+{% include content-block.md topShape="straight" title="This was UIKonf 2018" content=review_content %}
+
+
+<!-- MAP --> 
+{% capture map_content %}
+  <div class="uk-width-medium-4-10">
+    <a name="Location"></a>
+    <h2 class="uk-margin-large-top">Location</h2>
+    <p>RADIALSYSTEM V Berlin,
+        <br/>Holzmarktstr. 33,
+        <br/>10243 Berlin</p>
+  </div>
+  <div class="uk-width-medium-6-10 uk-margin-large-top">
+    <div id='map'></div>
+  </div>
+{% endcapture %}
+{% include content-block.md topShape="straight brand-color" content=map_content %}
 
 <script>
   mapboxgl.accessToken = 'pk.eyJ1Ijoic2FiaW5lLXVpa29uZiIsImEiOiJjamVuNGFjeHY0bzNiMndvM245NzM4aHp2In0.mEFZQQ-3Qhh2JudtqJ64RQ';
