--- a/mytaxi-stage.html
+++ b/mytaxi-stage.html
@@ -1,10 +1,10 @@
 ---
 layout: default
 order: 2
-title: MyTaxi Stage on a Boat
+title: mytaxi Stage on a Boat
 permalink: /mytaxi-stage/
 includeInNavigation: 0
-description: UIKonf 2019 - MyTaxi Stage on a Boat
+description: UIKonf 2019 - mytaxi Stage on a Boat
 ---
 
 <div class="headerimage uk-position-relative" style="background-image: url({{ site.baseurl }}/static/images/Seminarschiff-See.jpg);" data-uk-parallax="{bg: '-50'}">
@@ -12,7 +12,7 @@ description: UIKonf 2019 - MyTaxi Stage on a Boat
   <div class="uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-flex-column">
     <div class="teaser-light">
       <img src="{{ site.baseurl }}/static/images/sponsors/my-taxi.png" alt="logo mytaxi" width=300px>
-			<h2>MyTaxi Stage at UIKonf 2019</h2>
+			<h2>mytaxi Stage at UIKonf 2019</h2>
 		</div>
    </div>
 </div>
@@ -21,10 +21,10 @@ description: UIKonf 2019 - MyTaxi Stage on a Boat
   		<div class="uk-container uk-container-center uk-margin-large-bottom">
   			<div class="uk-grid">
   	    	<div class="uk-width-1-1">
-            <h2>MyTaxi Stage on a Boat</h2>
+            <h2>mytaxi Stage on a Boat</h2>
 
-            <p>This year we have bunch of new things at UIKonf. One of them is the parallel stage hosted by our Platinum Sponsor MyTaxi.</p>
-            <p>This stage will be on a boat anchored in front of our venue RadialSystem and will feature a workshop and two talks held by MyTaxi team.</p>
+            <p>This year we have bunch of new things at UIKonf. One of them is the parallel stage hosted by our Platinum Sponsor mytaxi.</p>
+            <p>This stage will be on a boat anchored in front of our venue RadialSystem and will feature a workshop and two talks held by mytaxi team.</p>
           </div>
       </div>
     </div>
@@ -48,7 +48,7 @@ description: UIKonf 2019 - MyTaxi Stage on a Boat
 				<h3>Rebuilding Technologies and Scaling Up Processes in the Passenger Tribe at mytaxi</h3>
 				<p>Presenter: Ivan Morschel<br/>
 					Date: Monday (overflow on Tuesday same time)<br/>
-					Location: MyTaxi Boat Stage, RadialSystem<br/>
+					Location: mytaxi Boat Stage, RadialSystem<br/>
 					Time: 11:50 - 12:25<br/>
 					Duration: 30min + 5min Q&A</p>
 				
@@ -79,7 +79,7 @@ About Ivan: Engineering tribe lead for the passenger app at mytaxi. Former posit
         				<h3>Tips & Tricks Gleaned for iOS Testing</h3>
         				<p>Presenter: Aya Akl<br/>
         					Date: Monday (overflow on Tuesday same time)<br/>
-        					Location: MyTaxi Boat Stage, RadialSystem<br/>
+        					Location: mytaxi Boat Stage, RadialSystem<br/>
         					Time: 12:25 - 13:00<br/>
         					Duration: 30min + 5min Q&A</p>
 				
