--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ redirect_from:
 
 
 <!-- REVIEW --> 
-{% capture review_content %}
+<!-- {% capture review_content %}
   <div class="uk-width-1-1 uk-text-center">
     <a name="videos"></a>
     <p>Thanks to everyone who participated, to our sponsors, our volunteers and ambassadors. You all contributed
@@ -147,7 +147,7 @@ redirect_from:
       frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
   </div>
 {% endcapture %}
-{% include content-block.md topShape="straight" title="This was UIKonf 2018" content=review_content %}
+{% include content-block.md topShape="straight" title="This was UIKonf 2018" content=review_content %} -->
 
 
 <!-- MAP --> 
